--- a/lib/configure.ac
+++ b/lib/configure.ac
@@ -330,7 +330,7 @@ AM_CONDITIONAL(OBSOLETE, test "$obsolete" = "yes")
 gl_INIT
 
 AC_CONFIG_FILES(Makefile libgsasl.pc po/Makefile.in \
-		gl/Makefile gl/tests/Makefile \
+		gl/Makefile tests/Makefile \
 		src/gsasl.h src/Makefile \
 		anonymous/Makefile cram-md5/Makefile \
 		digest-md5/Makefile external/Makefile \
