--- a/Makefile.cfg
+++ b/Makefile.cfg
@@ -16,7 +16,13 @@
 # along with GNU SASL; if not, write to the Free Software Foundation,
 # Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
 
+.DEFAULT_GOAL := bootstrap
+
 gtk-doc.make:
 	gtkdocize
 
 configure: gtk-doc.make
+	autoreconf --install
+
+bootstrap: configure
+	./configure $(CFGFLAGS)
