--- a/Makefile.cfg
+++ b/Makefile.cfg
@@ -16,15 +16,15 @@
 # along with GNU SASL; if not, write to the Free Software Foundation,
 # Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
 
-.DEFAULT_GOAL := bootstrap
-
 CFGFLAGS ?= --enable-gtk-doc
+
+ifeq ($(.DEFAULT_GOAL),abort-due-to-no-makefile)
+.DEFAULT_GOAL := bootstrap
+endif
 
 gtk-doc.make:
 	gtkdocize
 
-configure: gtk-doc.make
-	autoreconf --install
-
-bootstrap: configure
+bootstrap: gtk-doc.make
+	test -f ./configure || autoreconf --install
 	./configure $(CFGFLAGS)
