--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,5 +1,5 @@
 ## Process this file with automake to produce Makefile.in
-# Copyright (C) 2002, 2003, 2004, 2005 Simon Josefsson.
+# Copyright (C) 2002, 2003, 2004, 2005, 2006 Simon Josefsson.
 #
 # This file is part of GNU SASL Library.
 #
@@ -70,13 +70,9 @@ SUBDIRS += src
 
 # Maintainer targets
 
-POURL = ftp://ftp.unex.es/pub/gnu-i18n/po/maint/$(PACKAGE)
-update-po:
-	cd po && \
-	wget --no-verbose --timestamping --retr-symlinks $(POURL)/*.po && \
-	cvs add `ls *.po | grep -v quot.po` || true && \
-	ls *.po | sed 's/.po//' > LINGUAS && \
-	cvs commit -m "Sync with TP." LINGUAS `ls *.po | grep -v quot.po`
+update-po: refresh-po
+	cvs add `ls po/*.po | grep -v quot.po` || true && \
+	cvs commit -m "Sync with TP." po/LINGUAS `ls po/*.po | grep -v quot.po`
 
 ChangeLog:
 	cvs2cl --fsf --FSF --usermap ../.cvsusers -I ChangeLog -I .cvs \
