--- a/lib/src/Makefile.am
+++ b/lib/src/Makefile.am
@@ -28,7 +28,7 @@ include_HEADERS = gsasl.h gsasl-mech.h gsasl-compat.h
 libgsasl_la_LDFLAGS = -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) \
 	-export-symbols-regex '^(gsasl|GSASL).*' -no-undefined
 libgsasl_la_LIBADD = ../gl/libgl.la @LTLIBINTL@ @LTLIBIDN@
-libgsasl_la_SOURCES = gsasl.h.in internal.h \
+libgsasl_la_SOURCES = internal.h \
 	init.c done.c register.c error.c version.c \
 	callback.c property.c \
 	supportp.c suggest.c listmech.c \
