Make portable to mingw.

--- a/configure.ac
+++ b/configure.ac
@@ -32,6 +32,7 @@ AM_GNU_GETTEXT_VERSION(0.14.1)
 # Checks for programs.
 AC_PROG_CC
 gl_EARLY
+AC_LIBTOOL_WIN32_DLL
 AC_PROG_LIBTOOL
 AM_MISSING_PROG(PERL, perl, $missing_dir)
 AM_MISSING_PROG(HELP2MAN, help2man, $missing_dir)
