--- a/lib/configure.ac
+++ b/lib/configure.ac
@@ -38,6 +38,7 @@ AM_GNU_GETTEXT(external)
 AM_GNU_GETTEXT_VERSION(0.14.1)
 AC_PROG_CC
 gl_EARLY
+AC_LIBTOOL_WIN32_DLL
 AC_PROG_LIBTOOL
 
 # Checks for header files.
