--- a/configure.ac
+++ b/configure.ac
@@ -83,6 +83,23 @@ GTK_DOC_CHECK(1.1)
 # Set up the library.
 AC_CONFIG_SUBDIRS(lib)
 
+# Run self-tests under valgrind?
+if test "$cross_compiling" = no; then
+  AC_CHECK_PROGS(VALGRIND, valgrind)
+fi
+if test -n "$VALGRIND" && $VALGRIND true > /dev/null 2>&1; then
+  opt_valgrind_tests=yes
+else
+  opt_valgrind_tests=no
+  VALGRIND=
+fi 
+AC_MSG_CHECKING([whether self tests are run under valgrind])
+AC_ARG_ENABLE(valgrind-tests,
+	AS_HELP_STRING([--enable-valgrind-tests],
+                       [run self tests under valgrind]),
+  opt_valgrind_tests=$enableval)
+AC_MSG_RESULT($opt_valgrind_tests)
+
 # We are done.
 AC_CONFIG_FILES(Makefile po/Makefile.in \
 		doc/Makefile doc/reference/Makefile doc/doxygen/Doxyfile \
