Run under valgrind, if available.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -33,7 +33,8 @@ TESTS_ENVIRONMENT = SHISHI_KEYS=$(srcdir)/gssapi.key \
 	SHISHI_HOME=ignore-this-warning \
 	SHISHI_USER=ignore-this-warning \
 	THREADSAFETY_FILES=$(top_srcdir)/lib/*/*.c \
-	MD5FILE=$(srcdir)/cram-md5.pwd
+	MD5FILE=$(srcdir)/cram-md5.pwd \
+	$(VALGRID)
 
 ctests = external$(EXEEXT) cram-md5$(EXEEXT) digest-md5$(EXEEXT)	\
 	md5file$(EXEEXT)
