Use missing for epstopdf.

--- a/configure.ac
+++ b/configure.ac
@@ -37,6 +37,7 @@ AC_PROG_LIBTOOL
 AM_MISSING_PROG(PERL, perl, $missing_dir)
 AM_MISSING_PROG(HELP2MAN, help2man, $missing_dir)
 AM_MISSING_PROG(DIA, dia, $missing_dir)
+AM_MISSING_PROG(EPSTOPDF, epstopdf, $missing_dir)
 
 # Checks for header files.
 AC_CHECK_HEADERS(sys/poll.h sys/time.h)
