--- a/lib/configure.ac
+++ b/lib/configure.ac
@@ -374,7 +374,7 @@ AC_CONFIG_FILES(Makefile libgsasl.pc po/Makefile.in \
 		gl/Makefile tests/Makefile src/Makefile \
 		anonymous/Makefile cram-md5/Makefile \
 		digest-md5/Makefile external/Makefile \
-		gssapi/Makefile kerberos_v5/Makefile \
+		gssapi/Makefile gs2/Makefile kerberos_v5/Makefile \
 		login/Makefile ntlm/Makefile plain/Makefile \
 		securid/Makefile)
 AC_OUTPUT
