--- a/gl/Makefile.am
+++ b/gl/Makefile.am
@@ -16,6 +16,7 @@ noinst_LTLIBRARIES = libgl.la
 
 libgl_la_SOURCES =
 libgl_la_LIBADD = @LTLIBOBJS@
+libgl_la_LDFLAGS = $(AM_LDFLAGS)
 noinst_HEADERS =
 EXTRA_DIST =
 BUILT_SOURCES =
@@ -36,8 +37,8 @@ EXTRA_DIST += alloca_.h
 # We need the following in order to create <alloca.h> when the system
 # doesn't have one that works with the given compiler.
 alloca.h: alloca_.h
-	cp $(srcdir)/alloca_.h $@-t
-	mv $@-t $@
+	cp -f $(srcdir)/alloca_.h $@-t
+	mv -f $@-t $@
 MOSTLYCLEANFILES += alloca.h alloca.h-t
 
 ## end   gnulib module alloca-opt
@@ -50,6 +51,7 @@ BUILT_SOURCES += $(ARPA_INET_H)
 # doesn't have one.
 arpa/inet.h:
 	test -d arpa || mkdir arpa
+	rm -f $@-t $@
 	echo '#include <sys/socket.h>' >$@-t
 	mv $@-t $@
 MOSTLYCLEANFILES += arpa/inet.h arpa/inet.h-t
@@ -95,8 +97,8 @@ EXTRA_DIST += getopt_.h getopt_int.h
 # We need the following in order to create <getopt.h> when the system
 # doesn't have one that works with the given compiler.
 getopt.h: getopt_.h
-	cp $(srcdir)/getopt_.h $@-t
-	mv $@-t $@
+	cp -f $(srcdir)/getopt_.h $@-t
+	mv -f $@-t $@
 MOSTLYCLEANFILES += getopt.h getopt.h-t
 
 ## end   gnulib module getopt
@@ -116,7 +118,9 @@ libgl_la_SOURCES += gettext.h
 ## begin gnulib module iconvme
 
 libgl_la_SOURCES += iconvme.h iconvme.c
-libgl_la_LIBADD += $(LTLIBICONV)
+if GL_COND_LIBTOOL
+libgl_la_LDFLAGS += $(LTLIBICONV)
+endif
 
 ## end   gnulib module iconvme
 
@@ -134,6 +138,7 @@ BUILT_SOURCES += $(NETINET_IN_H)
 # doesn't have one.
 netinet/in.h:
 	test -d netinet || mkdir netinet
+	rm -f $@-t $@
 	echo '#include <sys/socket.h>' >$@-t
 	mv $@-t $@
 MOSTLYCLEANFILES += netinet/in.h netinet/in.h-t
@@ -185,6 +190,7 @@ EXTRA_DIST += stdbool_.h
 # We need the following in order to create <stdbool.h> when the system
 # doesn't have one that works.
 stdbool.h: stdbool_.h
+	rm -f $@-t $@
 	sed -e 's/@''HAVE__BOOL''@/$(HAVE__BOOL)/g' < $(srcdir)/stdbool_.h > $@-t
 	mv $@-t $@
 MOSTLYCLEANFILES += stdbool.h stdbool.h-t
@@ -205,6 +211,7 @@ BUILT_SOURCES += $(SYS_SELECT_H)
 # doesn't have one that works with the given compiler.
 sys/select.h:
 	test -d sys || mkdir sys
+	rm -f $@-t $@
 	echo '#include <sys/socket.h>' >$@-t
 	mv $@-t $@
 MOSTLYCLEANFILES += sys/select.h sys/select.h-t
@@ -221,8 +228,8 @@ EXTRA_DIST += socket_.h
 # doesn't have one that works with the given compiler.
 sys/socket.h: socket_.h
 	test -d sys || mkdir sys
-	cp $(srcdir)/socket_.h $@-t
-	mv $@-t $@
+	cp -f $(srcdir)/socket_.h $@-t
+	mv -f $@-t $@
 MOSTLYCLEANFILES += sys/socket.h sys/socket.h-t
 MOSTLYCLEANDIRS += sys
 
@@ -272,5 +279,3 @@ mostlyclean-local: mostlyclean-generic
 	      echo "rmdir $$dir"; rmdir $$dir; \
 	    fi; \
 	  done
-
-# Makefile.am ends here
